tests/tooling/fixtures/native/execution/positive/for_break_continue.objc3
module ForBreakContinueExec;

fn main() -> i32 {
  let sum = 0;
  for (let i = 0; i < 8; i = i + 1) {
    if (i == 2) {
      continue;
    }
    if (i == 6) {
      break;
    }
    sum = sum + i;
  }
  return sum;
}
