tests/tooling/fixtures/native/execution/negative/compound_assignment_bool_target.objc3
module CompoundAssignmentBoolTarget;

fn main() -> i32 {
  let flag = true;
  flag += 1;
  return 0;
}